data/derived/comb/progs/unify/prog0775.ml.out
Characters 135-154:
  let seen' = if List.mem h seen then helper (h::seen, t) in
                                      ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
